--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       target: "${APP_ENV:-development}"
       args:
         APP_ENV: "${APP_ENV:-development}"
+        MAIN_MODULE: "${MAIN_MODULE:-gapid}"
     volumes:
       - .:/app
     environment:
