--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Run locally
         run: |
-          docker-compose up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 docker-compose up -d
           docker-compose exec -T app bash -c "while ! >/dev/tcp/localhost/8000; do sleep 3; done"
           curl -fisS http://localhost:8000/
